compiler/tests/errortests/nested_returns.txt
FILENAME:6:16: error: Type mismatch in return statement of function 'nested': expected 'i32', but got '[u8]'.
        return y;
               ^
FILENAME:4:16: error: Type mismatch in return statement of function 'nested': expected 'i32', but got 'float'.
        return x;
               ^
